syntax = "proto3";

package my_grpc_proto;

service HelloServer {
    // 第一个接口
    rpc SayHello (HelloRequest) returns (HelloReplay) {
    }
    // 第二个接口
    rpc GetHelloMsg (HelloRequest) returns (HelloMessage) {
    }
}

message HelloRequest {
    string name = 1;
}

message HelloReplay {
    string message = 1;
}

message HelloMessage {
    string msg = 1;
}
